--- a/input/_ViewImports.cshtml
+++ b/input/_ViewImports.cshtml
@@ -3,5 +3,8 @@
 @using Statiq.Web
 @using Statiq.Web.Pipelines
 @using Microsoft.Extensions.Logging
+@using System;
+@using System.IO;
+@using System.Text;
 
 @inherits StatiqRazorPage<IDocument>
